--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flux-sdk",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "Flux protocol SDK",
   "main": "src/FluxProvider.js",
   "scripts": {
@@ -27,7 +27,7 @@
   "homepage": "https://github.com/fluxprotocol/flux-sdk#readme",
   "dependencies": {
     "bn.js": "^5.1.1",
-    "nearlib": "^0.22.0"
+    "near-api-js": "^0.23.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
