--- a/package.json
+++ b/package.json
@@ -1,42 +1,25 @@
 {
-  "name": "flux-sdk",
-  "version": "0.0.2",
-  "description": "Flux protocol SDK",
+  "name": "flux-sdk-ts",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest test --runInBand"
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jasperdg/flux-sdk.git"
-  },
-  "keywords": [
-    "flux",
-    "flux-protocol",
-    "near",
-    "near-protocol",
-    "blockchain",
-    "crypto"
-  ],
-  "author": "jasper de gooijer",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/jasperdg/flux-sdk/issues"
-  },
-  "homepage": "https://github.com/jasperdg/flux-sdk#readme",
-  "dependencies": {
-    "bn.js": "^5.1.1",
-    "nearlib": "^0.22.0",
-    "node-fetch": "^2.6.0",
-    "whatwg-fetch": "^3.0.0"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "babel-jest": "^25.1.0",
-    "babel-plugin-transform-default-import": "^1.0.0",
-    "jest": "^25.1.0",
-    "jest-cli": "^25.1.0"
+    "@types/jest": "^26.0.14",
+    "fs": "0.0.1-security",
+    "jest": "^26.5.3",
+    "ts-jest": "^26.4.1",
+    "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@types/node-fetch": "^2.5.7",
+    "bn.js": "^5.1.3",
+    "near-api-js": "^0.30.0",
+    "node-fetch": "^2.6.1"
   }
 }
