typescript working, updated readme

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "flux-sdk-ts",
-  "version": "1.0.0",
+  "name": "flux-sdk",
+  "version": "1.0.9",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "build": "tsc --build",
+    "clean": "tsc --build --clean"
   },
   "author": "",
   "license": "ISC",
